--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Pictures/walls/evangelion.png
-wallpaper = DP-1,~/Pictures/walls/evangelion.png
-wallpaper = DP-2,~/Pictures/walls/evangelion.png
-wallpaper = HDMI-A-1,~/Pictures/walls/evangelion.png
+preload = ~/Pictures/walls/anaProj.png
+wallpaper = DP-1,~/Pictures/walls/anaProj.png
+wallpaper = DP-2,~/Pictures/walls/anaProj.png
+wallpaper = HDMI-A-1,~/Pictures/walls/anaProj.png
