--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -17,8 +17,10 @@ env = XCURSOR_THEME, Catppuccin-Mocha-Pink-Cursors
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # Monitor
-monitor=HDMI-A-1,2560x1440@60,430x0,1
-monitor=DP-3,3440x1440@144,0x1440,1
+
+monitor=HDMI-A-1,2560x1080@60,1590x0,1
+monitor=DP-1,1920x1080@60,0x1080,1
+monitor=DP-2,1920x1080@165,1920x1080,1
 
 # Startup
 exec-once = swww init
@@ -28,9 +30,9 @@ exec = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OU
 exec-once = udiskie
 
 # Bar setup
-#layerrule = blur,waybar
-#layerrule = ignorezero,waybar
-#exec-once = ~/.config/waybar/launch.sh
+layerrule = blur,waybar
+layerrule = ignorezero,waybar
+exec-once = ~/.config/waybar/launch.sh
 
 # notification setup
 layerrule = blur, notifications
