--- a/dots/.config/waybar/config
+++ b/dots/.config/waybar/config
@@ -5,7 +5,7 @@
 {
     "position": "left",
     "layer": "top",
-    "output": "DP-3",
+    "output": "HDMI-A-1",
     "width": 44,
     "margin": "25 0 25 25",
     "modules-left": [
