Update hyprpaper.conf again

--- a/dots/.config/hypr/hyprpaper.conf
+++ b/dots/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/.config/hypr/wallpapers/.splashed.jpg
+preload = ~/Pictures/walls/anaProj.png
 
-wallpaper = HDMI-A-1,~/.config/hypr/wallpapers/.splashed.jpg
-wallpaper = DP-1,~/.config/hypr/wallpapers/.splashed.jpg
-wallpaper = DP-2,~/.config/hypr/wallpapers/.splashed.jpg
+wallpaper = DP-1,~/Pictures/walls/anaProj.png
+wallpaper = DP-2,~/Pictures/walls/anaProj.png
+wallpaper = HDMI-A-1,~/Pictures/walls/anaProj.png
