--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -9,11 +9,16 @@ env = QT_QPA_PLATFORMTHEME, qt5ct
 env = SDL_VIDEODRIVER, wayland
 env = _JAVA_AWT_WM_NONEREPARENTING, 1
 env = XDG_CURRENT_DESKTOP, Hyprland
-env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
 
 env = GTK_THEME, Catppuccin-Mocha-Standard-Pink-Dark
 env = XCURSOR_THEME, Catppuccin-Mocha-Pink-Cursors
+
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NANE,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # Monitor
@@ -26,7 +31,7 @@ monitor=DP-2,1920x1080@165,1920x1080,1
 exec-once = swww init
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-#exec-once = sleep 1 && ~/.config/hypr/scripts/nuke-portals.sh
+exec-once = sleep 1 && ~/.config/hypr/scripts/nuke-portals.sh
 exec-once = udiskie
 
 # Bar setup
@@ -39,8 +44,7 @@ layerrule = blur, notifications
 layerrule = ignorezero, notifications
 layerrule = blur, wofi
 layerrule = ignorezero, wofi
-layerrule = blur, anyrun
-layerrule = ignorezero, anyrun
+layerrule = blur, thunar
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -55,22 +59,22 @@ input {
 }
 
 general {
-    gaps_in = 13.5
-    gaps_out = 25
-    border_size = 1
+    gaps_in = 5
+    gaps_out = 5
+    border_size = 3
     col.active_border = rgba(F38BA8FF) rgba(A6E3A1FF) rgba(F9E2AFFF) rgba(89B4FAFF) rgba(F5C2E7FF) rgba(94E2D5FF) 45deg
-    col.inactive_border = rgba(1e1e2eFF)
+    col.inactive_border = rgb(A6ADC6)
 
     layout = dwindle
 }
 
 decoration {
-    rounding = 10
+    rounding = 5
     dim_special = 0.0
 
     blur = yes
-    blur_size = 22
-    blur_passes = 3
+    blur_size = 3
+    blur_passes = 2
     blur_new_optimizations = on
     blur_xray = off
     blur_ignore_opacity = true
@@ -80,8 +84,6 @@ decoration {
     shadow_render_power = 2 
     col.shadow = rgba(11111bFF)
     col.shadow_inactive = rgba(11111b77)
-
-    #screen_shader = ~/screenShader.frag
 }
 
 animations {
@@ -120,12 +122,6 @@ dwindle {
     # col.group_border = rgba(ffffff55)
 }
 
-# webcord setup
-windowrulev2 = workspace special:chat, class:^(WebCord)$
-windowrulev2 = opacity 0.9 override 0.9 override, class:^(WebCord)$
-bind = $mainMod, GRAVE, togglespecialworkspace, chat
-bind = CTRL_SHIFT,M,pass,^(WebCord)$
-
 # floating windowsss
 windowrulev2 = float, class:^(gpto)$
 windowrulev2 = move 51 5, class:^(gpto)$
@@ -137,39 +133,22 @@ windowrulev2 = pin, class:^(nmtui)$
 # Keybindings. See https://wiki.hyprland.org/Configuring/Binds/ for more
 
 # wallpaper dmenu
-bind = $mainMod, W, exec, ~/.config/hypr/scripts/wp-select.sh dmenu
+#bind = $mainMod, W, exec, ~/.config/hypr/scripts/wp-select.sh dmenu
 
 # hyprland controls
-bind = $mainMod SHIFT, E, exit,
-# hard reset
-bind = $mainMod SHIFT, R, exec, touch ~/.config/hypr/hyprland.conf; hyprctl dispatch forcerendererreload 1
+#bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod SHIFT, Return, fullscreen
+bind = $mainMod, F, fullscreen
 
 # apps
-#bind = $mainMod, D, exec, wofi --show drun
-bind = $mainMod, D, exec, anyrun
-bind = $mainMod, RETURN, exec, terminal
-bind = $mainMod, E, exec, firefox
-bind = , Print, exec, ~/.config/hypr/scripts/screenshot.sh
-bind = CONTROL, Print, exec, bash -c "grim /tmp/s.png && wl-copy < /tmp/s.png"
-bind = SHIFT, Print, exec, hyprshot -m region --clipboard-only
-bind = CTRL_SHIFT, Print, exec, ~/.config/hypr/scripts/toggle_recording.sh 
+bind = $mainMod, r, exec, wofi --show drun
+bind = $mainMod, RETURN, exec, wezterm
+bind = $mainMod, E, exec, thunar
+bind = SUPER ALT, S, exec, bash -c "grimshot save area /tmp/s.png && wl-copy < /tmp/s.png"
 
-bind = $mainMod, Insert, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-bind = $mainMod SHIFT, Insert, exec, cliphist list | rofi -dmenu | cliphist delete
-
-bind = $mainMod SHIFT, Q, killactive, 
-bind = $mainMod SHIFT, Space, togglefloating, 
-
-# Scratchpad
-bind = $mainMod, S, togglespecialworkspace, scratchpad
-bind = $mainMod SHIFT, S, movetoworkspace, special:scratchpad
-
-# window groups
-bind = $mainMod, TAB, changegroupactive, f
-bind = $mainMod, G, togglegroup,
+bind = $mainMod, Q, killactive, 
+bind = $mainMod, V, togglefloating, 
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -207,24 +186,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Resize mode
-bind= $mainMod, R, submap, resize
-
-# begin submap section
-submap=resize
-	# sets repeatable binds for resizing the active window
-	binde=,right,resizeactive,25 0
-	binde=,left,resizeactive,-25 0
-	binde=,up,resizeactive,0 -25
-	binde=,down,resizeactive,0 25
-	# use reset to go back to the global submap
-	bind=,escape,submap,reset 
-submap=reset
